Revert exposing last-id & add after param for streaming
